add favicon & change images

--- a/services/services.html
+++ b/services/services.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Msarat</title>
+    <link rel="shortcut icon" href="../content/assets/img/favicon.webp" type="image/x-icon">
+    <title>Msarat Al Mina</title>
     <!-- bootstrap CDN ltr v5.3  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -168,8 +169,11 @@
                                     alt="">
                             </div>
                             <h5 class="text_main_color">Air cargo services</h3>
-                                <p class="text-color">We provide customs clearance services to more than one airport at
-                                    the crossroads of Saudi Arabia.</p>
+                                <p class="text-color">Air freight services are one of the most important services
+                                    provided by the port tracks for customs clearance, as air freight is a greatly
+                                    facilitated process for business. It is the service in which aircraft are used to
+                                    transport items and goods from one place to another over very long distances that
+                                    extend to many countries.</p>
                         </div>
                     </div>
                 </div>
@@ -181,8 +185,11 @@
                                     src="../content/assets/img/outlets-section/frontal-truck.webp" alt="">
                             </div>
                             <h5 class="text_main_color">Ground Freight Services</h3>
-                                <p class="text-color">We provide ground freight services and help transport customer
-                                    merchandise.</p>
+                                <p class="text-color">We offer land freight services and assistance in transporting
+                                    customers’ goods. We have one of the largest fleets of multi-purpose land transport
+                                    in the Middle East. We are also constantly working on developing our trucks in order
+                                    to keep pace with the development of customers’ business and to respond quickly to
+                                    their requirements and customs clearance.</p>
                         </div>
                     </div>
                 </div>
@@ -194,8 +201,10 @@
                                     alt="">
                             </div>
                             <h5 class="text_main_color">Shipping Services</h3>
-                                <p class="text-color">We are working on a comprehensive multi-service network covering
-                                    the most significant number of Red Sea and Gulf ports</p>
+                                <p class="text-color">We facilitate all work specialized in customs clearance and
+                                    maritime logistical support, such as preparing and issuing documents and permits for
+                                    shipments, in addition to receiving, unloading, packaging, handling, loading, and
+                                    transporting goods.</p>
                         </div>
                     </div>
                 </div>
@@ -209,8 +218,10 @@
                                     alt="">
                             </div>
                             <h5 class="text_main_color">Storage Services</h3>
-                                <p class="text-color">We have a large base of warehouses and warehouses spread around
-                                    the ports and airports of the Kingdom of Saudi Arabia.</p>
+                                <p class="text-color">We have a large base of stores and warehouses scattered around the
+                                    ports and airports of the Kingdom of Saudi Arabia in order to quickly respond to
+                                    storage services in order to preserve the nature and quality of the stored items and
+                                    not to expose them to damage or damage.</p>
                         </div>
                     </div>
                 </div>
@@ -222,9 +233,10 @@
                                     alt="">
                             </div>
                             <h5 class="text_main_color">Import and Export Auxiliary Services</h3>
-                                <p class="text-color">We rely heavily on our expertise in providing assistance, clearing
-                                    documents, and permits in international trading businesses such as import and export
-                                    services.</p>
+                                <p class="text-color">Providing assistance and clearing documents and permits in the
+                                    business of international trade exchange, and we also rely on our relations inside
+                                    and outside the country in addition to the special relations with customs officials.
+                                </p>
                         </div>
                     </div>
                 </div>
@@ -236,9 +248,10 @@
                                     src="../content/assets/img/outlets-section/global-shipping.webp" alt="">
                             </div>
                             <h5 class="text_main_color">Logistics</h3>
-                                <p class="text-color">Logistics services are the most important services that commercial
-                                    companies rely on to facilitate their business. Logistics services are defined as
-                                    the art of coordinating and managing the flow of resources.</p>
+                                <p class="text-color">Logistics services are defined as the art of coordinating and
+                                    managing the flow of resources, starting from determining their locations and how to
+                                    obtain them through the steps of storing them and customs clearance until they are
+                                    transported and delivered to their final destination.</p>
                         </div>
                     </div>
                 </div>
