--- a/index-ar.html
+++ b/index-ar.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Msarat</title>
+    <link rel="shortcut icon" href="../content/assets/img/favicon.webp" type="image/x-icon">
+    <title>Msarat Al Mina</title>
     <!-- bootstrap CDN rtl v5.3  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.rtl.min.css"
         integrity="sha384-WJUUqfoMmnfkBLne5uxXj+na/c7sesSJ32gI7GfCk4zO4GthUKhSEGyvQ839BC51" crossorigin="anonymous">
@@ -92,7 +93,7 @@
     <!-- Start Navs -->
     <nav class="desktop-nav bg_red_color d-none d-lg-flex justify-content-between">
         <ul class="navslist m-0 p-0">
-            <li><a class="text-white" href="./index.html">الصفحة الرئيسية</a></li>
+            <li><a class="text-white" href="./index-ar.html">الصفحة الرئيسية</a></li>
             <li><a class="text-white" href="./services/services-ar.html">خدماتنا</a></li>
             <li class="desktop__dropdown">
                 <a class="text-white">المنافذ</a>
