--- a/outlets/air/air-ar.html
+++ b/outlets/air/air-ar.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Msarat</title>
+    <link rel="shortcut icon" href="../../content/assets/img/favicon.webp" type="image/x-icon">
+    <title>Msarat Al Mina</title>
     <!-- bootstrap CDN rtl v5.3  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.rtl.min.css"
         integrity="sha384-WJUUqfoMmnfkBLne5uxXj+na/c7sesSJ32gI7GfCk4zO4GthUKhSEGyvQ839BC51" crossorigin="anonymous">
