--- a/outlets/air/air.html
+++ b/outlets/air/air.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Msarat</title>
+    <link rel="shortcut icon" href="../../content/assets/img/favicon.webp" type="image/x-icon">
+    <title>Msarat Al Mina</title>
     <!-- bootstrap CDN ltr v5.3  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -98,7 +99,7 @@
             <li><a class="text-white" href="../../contact/contact.html">Contact us</a></li>
             <li><a class="text-white" href="./air-ar.html">عربي</a></li>
         </ul>
-        <button class="fontf__oswald"><a href="../../index.html#quote">get a quote</a></button>
+        <button class="fontf__oswald"><a class="text-white" href="../../index.html#quote">get a quote</a></button>
     </nav>
 
     <div class="mobile-nav__overlay"></div>
