--- a/contact/contact-ar.html
+++ b/contact/contact-ar.html
@@ -269,7 +269,7 @@
                                 -الشارع :طريق صلاح الدين الايوبي</p>
                         </li>
                         <li>الايميل:
-                            <p class="text-color">masar@masaratalmina.com</p>
+                            <p class="text-color">info@masaratalmina.com</p>
                         </li>
                     </ul>
                 </div>
