--- a/outlets/offshore/offshore.html
+++ b/outlets/offshore/offshore.html
@@ -264,7 +264,7 @@
                                 Street: Salah Al-Din Al-Ayyubi Road</p>
                         </li>
                         <li>Email:
-                            <p class="text-color">masar@masaratalmina.com</p>
+                            <p class="text-color">info@masaratalmina.com</p>
                         </li>
                     </ul>
                 </div>
